# RIPPLe

./: .env.example  .gitignore  .gitmodules  README.md  README_RSP_TOKEN.md  SIAv2.md  debug_tap_query.py  extract_dp1_complete.py  pyproject.toml  test_siav2_access.py  test_siav2_official_method.py  test_siav2_simple.py
docs/: README.md
manual_tests/: 01_environment_setup.py  run_tests.py
manual_tests/debug/: debug_sia_endpoint.py
notebooks/: 01_end_to_end_demo.ipynb
pipeline_configs/: README.md  README_RSP_CONFIGS.md  butler_repo_pipeline.yaml  default_pipeline.yaml  dp0_64x64_3band_extraction.yaml  dp1_auto_extraction_64x64.yaml  ecdfs_lens_finding_64x64.yaml  lsstdesc_public_pipeline.yaml  pipelines_check_pipeline.yaml  rc2_subset_pipeline.yaml  rsp_catalog_pipeline.yaml  rsp_dp0_pipeline.yaml  rsp_dp1_pipeline.yaml  test_dynamic_config.yaml  testdata_decam_pipeline.yaml
ripple/: __init__.py  main.py
ripple/butler_repo/: __init__.py  config_handler.py  create_repo.py  ingest_data.py  repo_manager.py
ripple/data/: __init__.py  exceptions.py  fetch.py  ingest_deeplense.py
ripple/data_access/: __init__.py  butler_client.py  cache_manager.py  config_examples.py  coordinate_resolver.py  coordinate_utils.py  data_fetcher.py  dataset_names.py  exceptions.py  rsp_tap_client.py  service_monitor.py
ripple/models/: __init__.py  base_model.py  builders.py  components.py  config.py  exceptions.py  inference.py  model_evaluator.py  model_factory.py  model_registry.py  model_trainer.py  predictions.py  vendored_sr_adapter.py
ripple/models/cli/: __init__.py  evaluate.py  pretrain_mae.py  train.py
ripple/models/ssl/: augmentations.py  checkpoint.py  mae.py  mae_trainer.py  sr_data.py  sr_head.py  sr_metrics.py  sr_model.py
ripple/pipeline/: __init__.py  config.py  exceptions.py  pipeline.py  pipeline_builder.py  pipeline_executor.py  pipeline_orchestrator.py  pipeline_registry.py  pipeline_stage.py  pipeline_step.py
ripple/pipeline/stages/: data_source_stage.py  ingestion_stage.py  model_stage.py  preprocessing_stage.py
ripple/preprocessing/: __init__.py  config.py  cutout_creator.py  data_cleaner.py  data_transformer.py  dataset.py  exceptions.py  feature_extractor.py  image_normalizer.py  manifest.py  preprocessor.py  psf_matcher.py
ripple/tests/: data_access_test.py
ripple/tests/butler_repo/: __init__.py  test_config_handler.py  test_create_repo.py  test_enhanced_butler_client.py  test_ingest_data.py  test_repo_manager.py  test_utils.py
ripple/tests/data/: test_fetch.py  (+1 more)
ripple/utils/: __init__.py  check_rsp_services.py  cutout_saver.py  logger.py  performance_monitor.py  run_data_access_tests.py
scripts/: demo_local_inference.py  demo_mae_pretrain.py
(+58 files in other folders)
